<resources>
    <string name="app_name">Warehouse</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="begin">Begin experiment</string>
    <string name="first_fragment_label">Warehouse experiment</string>
    <string name="second_fragment_label">Experiment in progress...</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_qr">QrActivity</string>

    <string name="server_url_default_value">http://10.10.10.145:5000</string>
    <string name="server_url_key">server_url</string>
    <string name="participant_id_key">participant_id</string>
    <string name="participant_id_default_value">test</string>
    <string name="condition_key">condition</string>

    <string name="condition_label_control">Control</string>
    <string name="condition_label_static">Static light</string>
    <string name="condition_label_projector">Projected path</string>

    <string name="condition_value_control">control</string>
    <string name="condition_value_static">static_light</string>
    <string name="condition_value_projector">projected_path</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>