<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        android:key="@string/server_url_key"
        android:defaultValue="@string/server_url_default_value"
        android:title="Server URL"
        app:useSimpleSummaryProvider="true"
        android:dialogTitle="Server URL"
        android:dialogMessage="e.g. http://10.10.10.145:5000" />

    <EditTextPreference
        android:key="@string/participant_id_key"
        android:defaultValue="@string/participant_id_default_value"
        android:title="Participant ID"
        app:useSimpleSummaryProvider="true"
        android:dialogTitle="Participant ID" />

    <ListPreference
        android:key="@string/condition_key"
        android:title="Condition"
        android:entries="@array/condition_labels"
        android:entryValues="@array/condition_values"
        android:defaultValue="control" />
</androidx.preference.PreferenceScreen>